# aoc23

./: .gitignore  aoc.cabal  aoc1.hs  aoc10.hs  aoc11.hs  aoc12.hs  aoc13.hs  aoc14.hs  aoc15.hs  aoc16.hs  aoc17.hs  aoc18.hs  aoc19.hs  aoc2.hs  aoc3.hs  aoc4.hs  aoc5.hs  aoc6.hs  aoc7.hs  aoc8.hs  aoc9.hs  test13.txt
