cabal-version: 3.6
name: aoc
version: 0

common aoc
  ghc-options: -Wall
  build-depends:
    , base
    , text
    , attoparsec
    , containers
    , array

executable aoc1
  import: aoc
  main-is: aoc1.hs

executable aoc2
  import: aoc
  main-is: aoc2.hs

executable aoc3
  import: aoc
  main-is: aoc3.hs

executable aoc4
  import: aoc
  main-is: aoc4.hs

executable aoc5
  import: aoc
  main-is: aoc5.hs

executable aoc6
  import: aoc
  main-is: aoc6.hs

executable aoc7
  import: aoc
  main-is: aoc7.hs

executable aoc8
  import: aoc
  main-is: aoc8.hs

executable aoc9
  import: aoc
  main-is: aoc9.hs

executable aoc10
  import: aoc
  main-is: aoc10.hs

executable aoc11
  import: aoc
  main-is: aoc11.hs
